--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     h3 {color:indigo;}
     p {color:maroon;}
     body {background-color:silver; text-align:center;}
+        .closing {font-weight:bold;}
         
 
         
