--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     <p>Following are some pictures, so you know just what you're getting when <strong>you</strong> book your flight.</p>
     <img src="https://www.kasandbox.org/programming-images/landscapes/sand-dunes.png" height="200" width="580" alt="Sandy slope with grass">
     <p class="sand-dune-info">A sand dune is a hill or mountain of sand, formed by the waves of the great lakes washing up sand, and <br>
-        the wind blowing in into great mountain like structures. There are many sand dunes in the UP of verying shapes and sizes, the most<br>
-        famous being the Sleeping Bear Dunes. They attrace tourists from around the world, and are truly magnificant to see.</p>
+        the wind blowing in into great mountain like structures. Although the UP isn't known for it's dunes, (as the lower peninsula is, being home<br>
+        to the famous <em>Sleeping Bear Dunes<em>), there are still many impressive dunes. One is the <strong>Log Slide Overlook<strong>, which<br>
+        is exactl what ist sounds like. Sand dunes can be great "play grounds" for kids, as well as a good, long hike.</p>
     <img src="https://www.kasandbox.org/programming-images/landscapes/beach-sunset.png" height="200" width="580" alt="colorful sunset reflection on lake">
     <p class="sunset-info">Another special thing about the UP is the sunsets. Some spots are better then others, but no matter where you're staying<br>
         you can most likely find a spot close by with a beautiful view. This is partly due to much less light polution, as well as <br>
