--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         #invitation {
             text-align:center;
             border:10px ridge;
-            width:400px;
+            width:800px;
+            height:75px;
             margin:auto;
+            font-size:75px;
             
             
         }
